Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/B2B_Order__c.field-meta.xml
<CustomField>
    <fullName>B2B_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>B2B_Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>