Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/BD_Legacy_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>BD_Legacy_SF_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy SF ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>