Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <description>Date the literature piece was created (not upload date)</description>
    <inlineHelpText>Please input document creation date. MM/YY</inlineHelpText>
    <label>Publication Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>