Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/EH_Competitors__c.field-meta.xml
<CustomField>
    <fullName>EH_Competitors__c</fullName>
    <label>Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aeroqual</fullName>
            </value>
            <value>
                <fullName>Agilent Technologies</fullName>
            </value>
            <value>
                <fullName>AirQualityEgg</fullName>
            </value>
            <value>
                <fullName>Airsensa</fullName>
            </value>
            <value>
                <fullName>Analytik Jena</fullName>
            </value>
            <value>
                <fullName>Büchi</fullName>
            </value>
            <value>
                <fullName>Dionex Corp</fullName>
            </value>
            <value>
                <fullName>Dustduino</fullName>
            </value>
            <value>
                <fullName>Envirowatch</fullName>
            </value>
            <value>
                <fullName>Foss</fullName>
            </value>
            <value>
                <fullName>GBC Scientific Equipment</fullName>
            </value>
            <value>
                <fullName>Geotech</fullName>
            </value>
            <value>
                <fullName>Hitachi Instruments</fullName>
            </value>
            <value>
                <fullName>Jasco</fullName>
            </value>
            <value>
                <fullName>LabTech</fullName>
            </value>
            <value>
                <fullName>Mettler-Toledo International</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Nerds for nature</fullName>
            </value>
            <value>
                <fullName>Netsch</fullName>
            </value>
            <value>
                <fullName>ReliaSens</fullName>
            </value>
            <value>
                <fullName>Shimadzu</fullName>
            </value>
            <value>
                <fullName>Spectro Analytical Instruments</fullName>
            </value>
            <value>
                <fullName>TA Instruments</fullName>
            </value>
            <value>
                <fullName>Thermo Fisher Scientific</fullName>
            </value>
            <value>
                <fullName>Varian</fullName>
            </value>
            <value>
                <fullName>VWR International</fullName>
            </value>
            <value>
                <fullName>Waters Corporation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>