Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/EH_Food_Manufacturing__c.field-meta.xml
<CustomField>
    <fullName>EH_Food_Manufacturing__c</fullName>
    <label>Food Manufacturing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Forestry</fullName>
            </value>
            <value>
                <fullName>Grain</fullName>
            </value>
            <value>
                <fullName>Meat</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Processed foods</fullName>
            </value>
            <value>
                <fullName>Tobacco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>