Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/EH_Industrial__c.field-meta.xml
<CustomField>
    <fullName>EH_Industrial__c</fullName>
    <label>Industrial</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advanced Materials</fullName>
            </value>
            <value>
                <fullName>Architectural/Building Materials</fullName>
            </value>
            <value>
                <fullName>Chemical/Fine Chemicals</fullName>
            </value>
            <value>
                <fullName>Consumer Products</fullName>
            </value>
            <value>
                <fullName>Cosmetics &amp; Personal Care</fullName>
            </value>
            <value>
                <fullName>Lubricants</fullName>
            </value>
            <value>
                <fullName>Mining, Minerals, Metals and Alloys</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Nutraceutical/Botanical/Natural Remedies</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Polymers/Plastics</fullName>
            </value>
            <value>
                <fullName>Semiconductors/Electronics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>