Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/EH_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>EH_Market_Segment__c</fullName>
    <label>Market Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Food Manufacturing</fullName>
            </value>
            <value>
                <fullName>Food R&amp;D &amp; Testing</fullName>
            </value>
            <value>
                <fullName>Forensics</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Nano</fullName>
            </value>
            <value>
                <fullName>Pharma &amp; Biotech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>