Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/EH_Number_of_Ratings__c.field-meta.xml
<CustomField>
    <fullName>EH_Number_of_Ratings__c</fullName>
    <label>Number of Ratings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>