Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/EH_Original_Owner__c.field-meta.xml
<CustomField>
    <fullName>EH_Original_Owner__c</fullName>
    <label>Original Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>