Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/EH_Pharma_Biotech__c.field-meta.xml
<CustomField>
    <fullName>EH_Pharma_Biotech__c</fullName>
    <label>Pharma Biotech</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Product Development/Research</fullName>
            </value>
            <value>
                <fullName>Regulatory Testing</fullName>
            </value>
            <value>
                <fullName>Safety/Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>