Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/EH_Technique__c.field-meta.xml
<CustomField>
    <fullName>EH_Technique__c</fullName>
    <label>Technique</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Atomic Spectroscopy</fullName>
            </value>
            <value>
                <fullName>Chromatography</fullName>
            </value>
            <value>
                <fullName>Elemental Analysis</fullName>
            </value>
            <value>
                <fullName>Elm</fullName>
            </value>
            <value>
                <fullName>Functional Analysis</fullName>
            </value>
            <value>
                <fullName>Hyphenated Technique</fullName>
            </value>
            <value>
                <fullName>Molecular Spectroscopy</fullName>
            </value>
            <value>
                <fullName>OneSource</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Thermal Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>