Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/EH_Type_Of_Content__c.field-meta.xml
<CustomField>
    <fullName>EH_Type_Of_Content__c</fullName>
    <label>Type of Content</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advertisements</fullName>
            </value>
            <value>
                <fullName>Application Notes</fullName>
            </value>
            <value>
                <fullName>Application Sheet</fullName>
            </value>
            <value>
                <fullName>Articles</fullName>
            </value>
            <value>
                <fullName>Banner/Email Signature</fullName>
            </value>
            <value>
                <fullName>Brochures</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Case Studies</fullName>
            </value>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>Certificates (CE, 9001, 14001)</fullName>
            </value>
            <value>
                <fullName>Cheat Sheet</fullName>
            </value>
            <value>
                <fullName>Compendium</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>Flyers</fullName>
            </value>
            <value>
                <fullName>How-To</fullName>
            </value>
            <value>
                <fullName>Infographics</fullName>
            </value>
            <value>
                <fullName>Manuals</fullName>
            </value>
            <value>
                <fullName>Marketing News</fullName>
            </value>
            <value>
                <fullName>MIS</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Packing Lists</fullName>
            </value>
            <value>
                <fullName>PDL</fullName>
            </value>
            <value>
                <fullName>Photos</fullName>
            </value>
            <value>
                <fullName>Playbook</fullName>
            </value>
            <value>
                <fullName>Preparing Your Lab</fullName>
            </value>
            <value>
                <fullName>Presentations</fullName>
            </value>
            <value>
                <fullName>Pricing list</fullName>
            </value>
            <value>
                <fullName>Product Notes</fullName>
            </value>
            <value>
                <fullName>Promotional Posters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>