Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/EH_Use__c.field-meta.xml
<CustomField>
    <fullName>EH_Use__c</fullName>
    <description>Indicates whether the content is for internal PKI use or can be publicly shared externally</description>
    <label>Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>