Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Date after which the material is considered obsolete</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>