Perkin-UAT/force-app/main/default/objects/ContentVersion/fields/SBE__c.field-meta.xml
<CustomField>
    <fullName>SBE__c</fullName>
    <description>Name of the division to which the training material references</description>
    <label>SBE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EH</fullName>
            </value>
            <value>
                <fullName>LSS</fullName>
            </value>
            <value>
                <fullName>INF</fullName>
            </value>
            <value>
                <fullName>DX</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>GENERIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>