Perkin-UAT/force-app/main/default/objects/ContentVersion/recordTypes/EH_GLOBAL_CONTENT_LIBRARY.recordType-meta.xml
<RecordType>
    <fullName>EH_GLOBAL_CONTENT_LIBRARY</fullName>
    <active>true</active>
    <description>Metadata associated with the EH Global Content Library Sync with Sharepoint</description>
    <label>EH Global Content Library</label>
</RecordType>