Perkin-UAT/force-app/main/default/objects/ContentVersion/recordTypes/Marketing_Material.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Material</fullName>
    <active>true</active>
    <label>Marketing Material</label>
</RecordType>