Perkin-UAT/force-app/main/default/objects/ContentVersion/recordTypes/Training_Materials.recordType-meta.xml
<RecordType>
    <fullName>Training_Materials</fullName>
    <active>true</active>
    <description>Describes the fields associated with internal training materials</description>
    <label>Training Materials</label>
</RecordType>